--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Research</h2>
+								<h4>A few projects I have participated in.</h4>
 								<span class="image main"><img src="images/artificial-chemistry.jpg" alt="" /></span>
 								<h2>Artificial Chemistry</h2>
 								<h3>How Environments Sculpt Molecular Complexity</h3>
