--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<li><a href="#intro">About Me</a></li>
 								<li><a href="#work">Research</a></li>
 								<!--<li><a href="#about">Talks</a></li>-->
-								<li><a href="https://champagnealexandre.github.io/cv.pdf">CV</a></li>
+								<li><a href="https://champagnealexandre.github.io/cv.pdf" target="_blank">CV</a></li>
 								<!--<li><a href="#contact">Contact</a></li>-->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
