cosmetic fixes + rewrite intro

--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/me3.jpg" alt="" /></span>
 								<p style="font-size: 20pt;">Hi!</p>
-								<p>I am a physicist with dual training in philosophy, deeply passionate about the origins of life and complex systems.</p>
-								<p>I also maintain the <a href="https://buttondown.com/ooldigest/" target="_blank">Origin of Life Digest</a> and am an active member of the <a href="https://www.oolen.org" target="_blank">Origin of Life Early Career Network</a>.</p>
+								<p>I’m a physicist with dual training in philosophy, working at the intersection of complex systems, major evolutionary transitions, and the origins and detection of life, with a particular emphasis on agnostic approaches to life detection.</p>
+								<p>I completed my PhD at the Université de Montréal in 2025. My thesis, <a href="https://hdl.handle.net/1866/42175" target="_blank">La spatialité dans l’évolution prébiotique : vers une physique de l’émergence de la complexité</a> (<i>Spatiality in prebiotic evolution: toward a physics of the emergence of complexity</i>), explored how spatial structure can shape the emergence of molecular and evolutionary complexity.</p>
+								<p>I’m currently a NASA Postdoctoral Program (NPP) Fellow at Arizona State University’s <a href="https://biodesign.asu.edu" target="_blank">Biodesign Institute</a>. My work focuses on developing agnostic approaches to identifying life through measurable signatures of molecular complexity.</p>
+								<p>I also maintain the <a href="https://buttondown.com/ooldigest/" target="_blank">Origin of Life Digest</a>, and I’ve been an active member of the <a href="https://www.oolen.org" target="_blank">Origin of Life Early Career Network</a> (OoLEN) since 2021, serving on its Executive Board since 2022.</p>
 
 							</article>
 
@@ -67,42 +69,77 @@
 							<article id="work">
 								<h2 class="major">Research</h2>
 								<h4>A few projects I have participated in.</h4>
-								<span class="image main"><img src="images/artificial-chemistry1.jpg" alt="" /></span>
+								<p style="margin-bottom: 3rem;"></p>
+
 								<h2>Artificial Chemistry</h2>
 								<h3>How Environments Sculpt Molecular Complexity</h3>
 								<p>Life elsewhere may not look like life on Earth, so how do we recognize it? One promising clue is the presence of very complex molecules—the kind that usually take many steps to build. But could nonliving environments accidentally produce the same signal? I explored this by simulating “worlds” made of tiny, connected pools—think pores in rock or channels in a hydrothermal system—where chemicals flow in, react, drift to neighbors, and wash out again.</p>
 								<p>What emerged is that space and flow matter a lot. Certain layouts and moderate mixing can nudge chemistry toward more intricate products, even without biology. In contrast, highly disordered connections—or mixing that’s too fast—tend to erase or dilute complexity before it can accumulate or be detected. The takeaway is practical: measuring “complexity alone” can mislead if we ignore how the environment moves and organizes matter. Accounting for transport and topology helps us design better life-detection strategies and laboratory setups—both to avoid false positives and to deliberately cultivate conditions where complexity can arise from scratch.</p>
-								<span class="image main" style="margin-top: 5rem;"><img src="images/information.jpg" alt="" /></span>
+								<figure class="fig" style="margin-bottom: 5rem;">
+								  <span class="image main">
+								    <img src="images/artificial-chemistry1.jpg" alt="" />
+								  </span>
+								  <figcaption class="figcap">(Champagne-Ruel et al., 2025)</figcaption>
+								</figure>							
 								<h2>Information</h2>
 								<h3>Exploring the Universal Language of Life</h3>
 								<p>The origin of life is a multifaceted question, ranging from the origin of life on Earth as we know it to the origin of all possible life in the Universe. The Universe is full of strange and extreme environments from our earthly perspective, and life there could be radically different from what we know. As a physicist, determining the conditions for all possible life is an absolutely fascinating question.</p>
 								<p>Several approaches address this question of the conditions for all possible life. However, one of them seems particularly promising to me: the analysis of information in living systems. Information transcends any physical system and seems to be able to explain phenomena that would otherwise be incomprehensible. In a recent research project, I am focusing on compiling research works based on this approach.</p>
 								<p>Bringing together approaches that are based on the concept of information will allow for the unification of a developing analytical framework that could revolutionize research on the origin of life. Working at the frontiers of science is undoubtedly one of the aspects of my work that motivates me the most!</p>
-								<span class="image main" style="margin-top: 5rem;"><img src="images/diffusion1.jpg" alt="" /></span>
+								<p style="margin-bottom: 5rem;"></p>
+								<!--
+								<figure class="fig" style="margin-bottom: 5rem;">
+								  <span class="image main">
+								    <img src="images/information.jpg" alt="" />
+								  </span>
+								  <figcaption class="figcap"></figcaption>
+								</figure>	
+								-->
 								<h2>Diffusion</h2>
 								<h3>Elucidating Structure Formation at Life's Origin</h3>
 								<p>Understanding the mechanisms that led to life as we know it is one of the most fascinating puzzles in modern science. Yet, two important aspects of this puzzle still elude us. We do not fully understand how the first proto-cells could have formed, and what factors might have favored cooperation among the first living entities necessary for the construction of increasingly complex biological objects. Several solutions have been proposed to account for these two phenomena, but none are entirely general and definitive. What if there was a common solution to these two puzzles in a completely common physical process?</p>
 								<p>This assumption is precisely the subject of a research project I conducted, whose results were <a href="http://doi.org/10.1103/PhysRevE.110.014301" target="_blank">published in Physical Review E</a>, which explored the possible role of diffusion as a driver of complexity at the origin of life. Using cutting-edge numerical simulations, we were able to demonstrate that this very common phenomenon can generate both spatial structures and the emergence of cooperative behaviors—two crucial elements for the emergence of life.</p>
 								<p>This discovery contributes to shedding new light not only on the emergence of life but also on a whole host of complex phenomena that undergo the effects of diffusion and depend on a form of cooperation in the unfolding of their dynamics. Our research thus helps to deepen our understanding of phenomena as varied as the behavior of bacterial colonies, bird flocking, or even traffic congestion.</p>
-								<span class="image main" style="margin-top: 5rem;"><img src="images/methods1.jpg" alt="" /></span>
+								<figure class="fig" style="margin-bottom: 5rem;">
+								  <span class="image main">
+								    <img src="images/diffusion1.jpg" alt="" />
+								  </span>
+								  <figcaption class="figcap">(Champagne-Ruel et al., 2024)</figcaption>
+								</figure>	
 								<h2>Methods in Origin of Life Research</h2>
 								<h3>Bridging Disciplines in Origins of Life Studies</h3>
 								<p>The origin of life is a multifaceted research topic that intersects numerous scientific disciplines, including chemistry, physics, and biology. The integration of diverse tools, techniques, and perspectives from these fields poses significant communication challenges. However, the urgency to forge connections among these varied research approaches is critical for advancing our understanding of this complex subject.</p>
-								<p>The imperative to bridge the disciplines involved in origin of life (OoL) research was the driving force behind a collaborative effort to compile and summarize the diverse methodologies used to explore this complex topic. The <a href="https://arxiv.org/abs/2308.11665" target="_blank">review that resulted from our joint work</a> serves as an exhaustive resource, covering a broad spectrum of technical aspects from analytical chemistry to mathematical modeling. It champions a multidisciplinary approach for future research, emphasizing the need to align experimental results with mathematical and computational models to synchronize methodologies and enhance insights in OoL research.</p>
+								<p>The imperative to bridge the disciplines involved in origin of life (OoL) research was the driving force behind a collaborative effort to compile and summarize the diverse methodologies used to explore this complex topic. The <a href="h3tps://arxiv.org/abs/2308.11665" target="_blank">review that resulted from our joint work</a> serves as an exhaustive resource, covering a broad spectrum of technical aspects from analytical chemistry to mathematical modeling. It champions a multidisciplinary approach for future research, emphasizing the need to align experimental results with mathematical and computational models to synchronize methodologies and enhance insights in OoL research.</p>
 								<p>My specific contribution to this article focuses on the section regarding information theory. Here, I delve into how information-theoretic principles can be applied to decipher the processes potentially responsible for the emergence of life. I discuss the pivotal role of information in biological systems and the evolution of complexity. This innovative perspective is essential for bridging the divide between abiotic chemical systems and the genesis of living organisms, ultimately propelling forward our efforts to tackle these challenging questions.</p>
-								<span class="image main" style="margin-top: 5rem;"><img src="images/cooperation1.jpg" alt="" /></span>
+								<figure class="fig" style="margin-bottom: 5rem;">
+								  <span class="image main">
+								    <img src="images/methods1.jpg" alt="" />
+								  </span>
+								  <figcaption class="figcap">(OoLEN et al., 2023)</figcaption>
+								</figure>	
 								<h2>Cooperation</h2>
 								<h3>Unveiling the Cooperative Origins of Life</h3>
 								<p>I have always been intrigued by the problem of the origin of life and its subsequent evolution, which are exceptionally difficult scientific questions to solve. With recent advances in exoplanetary exploration, understanding how life appeared on Earth and how it could appear in space is becoming increasingly urgent.</p>
 								<p>Traditionally addressed in biology, it is becoming increasingly evident that to solve these mysteries, they must be approached from different disciplines. A recent project, whose results were <a href="https://doi.org/10.3390/life12020254" target="_blank">published in Life</a>, led me to take an interest in the crucial role that cooperation plays in the emergence of life. It was demonstrated that mutations occurring in an evolutionary system could greatly favor the cooperative behaviors required for the complexification of matter.</p>
 								<p>This research is particularly exciting for astrobiologists, especially given the new observational powers provided by the James Webb Space Telescope. It indicates that life might not only be possible in the mild conditions of Earth-like planets but could also arise in more extreme environments. The message from our work is clear: in the quest for extraterrestrial life, leave no stone unturned, as natural cooperation—and thus life—could emerge from anywhere, even the most unwelcoming environments.</p>
-								<span class="image main" style="margin-top: 5rem;"><img src="images/materials1.jpg" alt="" /></span>
+								<figure class="fig" style="margin-bottom: 5rem;">
+								  <span class="image main">
+								    <img src="images/cooperation1.jpg" alt="" />
+								  </span>
+								  <figcaption class="figcap">(Champagne-Ruel et al., 2022)</figcaption>
+								</figure>	
 								<h2>Materials Science</h2>
 								<h3>Exploring the Microscopic Movements That Shape Our World</h3>
 								<p>As a physicist, I've been intrigued by how the properties of materials like airplane propeller blades, reinforced concrete in bridges, and magnesium in competition bike frames are influenced by the microscopic movement of atoms within alloys. These movements can introduce defects that weaken the materials, as seen in the premature deterioration of bridges due to rusting steel cables. However, metallurgists have harnessed these atomic movements for millennia to manipulate material properties like hardness and flexibility, even without fully understanding the underlying atomic dynamics.</p>
 								<p>The scientific exploration of these phenomena dates back to the 19th century with Svante Arrhenius, who linked reaction speeds to temperature. More recently, a study I was involved in, <a href="https://doi.org/10.1038/s41467-020-17812-2" target="_blank">published in Nature Communications</a>, utilized advanced simulation algorithms and massive data processing to uncover that the so-called compensation law, a mysterious behavior observed in material defects, is a statistical phenomenon related to the weakening of chemical bonds at high energy barriers.</p>
 								<p>This breakthrough, achieved by analyzing millions of atomic movements, not only clarifies a century-old mystery but also paves the way for developing more sustainable and less costly alloys, enhancing our ability to control material properties and reduce environmental impact.</p>
-							</article>
+								<figure class="fig" style="margin-bottom: 5rem;">
+								  <span class="image main">
+								    <img src="images/materials1.jpg" alt="" />
+								  </span>
+								  <figcaption class="figcap">(Gelin et al., 2020)</figcaption>
+								</figure>	
+								</article>
 
 						<!-- About -->
 							<article id="about">
