--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">About Me</h2>
-								<span class="image main"><img src="images/me3.jpg" alt="" /></span>
+								<span class="image main"><img src="images/me.jpg" alt="" /></span>
 								<p style="font-size: 20pt;">Hi!</p>
 								<p>I’m a physicist with dual training in philosophy, working at the intersection of complex systems, major evolutionary transitions, and the origins and detection of life, with a particular emphasis on agnostic approaches to life detection.</p>
 								<p>I completed my PhD at the Université de Montréal in 2025. My thesis, <a href="https://hdl.handle.net/1866/42175" target="_blank">La spatialité dans l’évolution prébiotique : vers une physique de l’émergence de la complexité</a> (<i>Spatiality in prebiotic evolution: toward a physics of the emergence of complexity</i>), explored how spatial structure can shape the emergence of molecular and evolutionary complexity.</p>
@@ -77,7 +77,7 @@
 								<p>What emerged is that space and flow matter a lot. Certain layouts and moderate mixing can nudge chemistry toward more intricate products, even without biology. In contrast, highly disordered connections—or mixing that’s too fast—tend to erase or dilute complexity before it can accumulate or be detected. The takeaway is practical: measuring “complexity alone” can mislead if we ignore how the environment moves and organizes matter. Accounting for transport and topology helps us design better life-detection strategies and laboratory setups—both to avoid false positives and to deliberately cultivate conditions where complexity can arise from scratch.</p>
 								<figure class="fig" style="margin-bottom: 5rem;">
 								  <span class="image main">
-								    <img src="images/artificial-chemistry1.jpg" alt="" />
+								    <img src="images/artificial-chemistry.jpg" alt="" />
 								  </span>
 								  <figcaption class="figcap">(Champagne-Ruel et al., 2025)</figcaption>
 								</figure>							
@@ -102,7 +102,7 @@
 								<p>This discovery contributes to shedding new light not only on the emergence of life but also on a whole host of complex phenomena that undergo the effects of diffusion and depend on a form of cooperation in the unfolding of their dynamics. Our research thus helps to deepen our understanding of phenomena as varied as the behavior of bacterial colonies, bird flocking, or even traffic congestion.</p>
 								<figure class="fig" style="margin-bottom: 5rem;">
 								  <span class="image main">
-								    <img src="images/diffusion1.jpg" alt="" />
+								    <img src="images/diffusion.jpg" alt="" />
 								  </span>
 								  <figcaption class="figcap">(Champagne-Ruel et al., 2024)</figcaption>
 								</figure>	
@@ -113,7 +113,7 @@
 								<p>My specific contribution to this article focuses on the section regarding information theory. Here, I delve into how information-theoretic principles can be applied to decipher the processes potentially responsible for the emergence of life. I discuss the pivotal role of information in biological systems and the evolution of complexity. This innovative perspective is essential for bridging the divide between abiotic chemical systems and the genesis of living organisms, ultimately propelling forward our efforts to tackle these challenging questions.</p>
 								<figure class="fig" style="margin-bottom: 5rem;">
 								  <span class="image main">
-								    <img src="images/methods1.jpg" alt="" />
+								    <img src="images/methods.jpg" alt="" />
 								  </span>
 								  <figcaption class="figcap">(OoLEN et al., 2023)</figcaption>
 								</figure>	
@@ -124,7 +124,7 @@
 								<p>This research is particularly exciting for astrobiologists, especially given the new observational powers provided by the James Webb Space Telescope. It indicates that life might not only be possible in the mild conditions of Earth-like planets but could also arise in more extreme environments. The message from our work is clear: in the quest for extraterrestrial life, leave no stone unturned, as natural cooperation—and thus life—could emerge from anywhere, even the most unwelcoming environments.</p>
 								<figure class="fig" style="margin-bottom: 5rem;">
 								  <span class="image main">
-								    <img src="images/cooperation1.jpg" alt="" />
+								    <img src="images/cooperation.jpg" alt="" />
 								  </span>
 								  <figcaption class="figcap">(Champagne-Ruel et al., 2022)</figcaption>
 								</figure>	
@@ -135,7 +135,7 @@
 								<p>This breakthrough, achieved by analyzing millions of atomic movements, not only clarifies a century-old mystery but also paves the way for developing more sustainable and less costly alloys, enhancing our ability to control material properties and reduce environmental impact.</p>
 								<figure class="fig" style="margin-bottom: 5rem;">
 								  <span class="image main">
-								    <img src="images/materials1.jpg" alt="" />
+								    <img src="images/materials.jpg" alt="" />
 								  </span>
 								  <figcaption class="figcap">(Gelin et al., 2020)</figcaption>
 								</figure>	
