--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 								<p style="font-size: 20pt;">Hi!</p>
 								<p>I’m a physicist with dual training in philosophy, working at the intersection of complex systems, major evolutionary transitions, and the origins and detection of life, with a particular emphasis on agnostic approaches to life detection.</p>
 								<p>I completed my PhD at the Université de Montréal in 2025. My thesis, <a href="https://hdl.handle.net/1866/42175" target="_blank">La spatialité dans l’évolution prébiotique : vers une physique de l’émergence de la complexité</a> (<i>Spatiality in prebiotic evolution: toward a physics of the emergence of complexity</i>), explored how spatial structure can shape the emergence of molecular and evolutionary complexity.</p>
-								<p>I’m currently a NASA Postdoctoral Program (NPP) Fellow at Arizona State University’s <a href="https://biodesign.asu.edu" target="_blank">Biodesign Institute</a>. My work focuses on developing agnostic approaches to identifying life through measurable signatures of molecular complexity.</p>
-								<p>I also maintain the <a href="https://buttondown.com/ooldigest/" target="_blank">Origin of Life Digest</a>, and I’ve been an active member of the <a href="https://www.oolen.org" target="_blank">Origin of Life Early Career Network</a> (OoLEN) since 2021, serving on its Executive Board since 2022.</p>
+								<p>I’m currently a NASA Postdoctoral Program Fellow at Arizona State University’s <a href="https://biodesign.asu.edu" target="_blank">Biodesign Institute</a>. My work focuses on developing agnostic approaches to identifying life through measurable signatures of molecular complexity.</p>
+								<p>I also maintain the <a href="https://buttondown.com/ooldigest/" target="_blank">Origin of Life Digest</a>, and I’m a member of the <a href="https://www.oolen.org" target="_blank">Origin of Life Early Career Network</a> (OoLEN), serving on its Executive Board since 2022.</p>
 
 							</article>
 
