--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<article id="intro">
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/me.jpg" alt="" /></span>
-								<p style="font-size: 20pt;">Hi!</p>
+								<p style="font-size: 24pt;">Hi!</p>
 								<p>I’m a physicist with dual training in philosophy, working at the intersection of complex systems, major evolutionary transitions, and the origins and detection of life, with a particular emphasis on agnostic approaches to life detection.</p>
 								<p>I completed my PhD at the Université de Montréal in 2025. My thesis, <a href="https://hdl.handle.net/1866/42175" target="_blank">La spatialité dans l’évolution prébiotique : vers une physique de l’émergence de la complexité</a> (<i>Spatiality in prebiotic evolution: toward a physics of the emergence of complexity</i>), explored how spatial structure can shape the emergence of molecular and evolutionary complexity.</p>
 								<p>I’m currently a NASA Postdoctoral Program Fellow at Arizona State University’s <a href="https://biodesign.asu.edu" target="_blank">Biodesign Institute</a>. My work focuses on developing agnostic approaches to identifying life through measurable signatures of molecular complexity.</p>
@@ -106,7 +106,7 @@
 								  </span>
 								  <figcaption class="figcap">(Champagne-Ruel et al., 2024)</figcaption>
 								</figure>	
-								<h2>Methods in Origin of Life Research</h2>
+								<h2>Methods in Origin Research</h2>
 								<h3>Bridging Disciplines in Origins of Life Studies</h3>
 								<p>The origin of life is a multifaceted research topic that intersects numerous scientific disciplines, including chemistry, physics, and biology. The integration of diverse tools, techniques, and perspectives from these fields poses significant communication challenges. However, the urgency to forge connections among these varied research approaches is critical for advancing our understanding of this complex subject.</p>
 								<p>The imperative to bridge the disciplines involved in origin of life (OoL) research was the driving force behind a collaborative effort to compile and summarize the diverse methodologies used to explore this complex topic. The <a href="h3tps://arxiv.org/abs/2308.11665" target="_blank">review that resulted from our joint work</a> serves as an exhaustive resource, covering a broad spectrum of technical aspects from analytical chemistry to mathematical modeling. It champions a multidisciplinary approach for future research, emphasizing the need to align experimental results with mathematical and computational models to synchronize methodologies and enhance insights in OoL research.</p>
@@ -129,7 +129,7 @@
 								  <figcaption class="figcap">(Champagne-Ruel et al., 2022)</figcaption>
 								</figure>	
 								<h2>Materials Science</h2>
-								<h3>Exploring the Microscopic Movements That Shape Our World</h3>
+								<h3>Exploring the Movements That Shape Our World</h3>
 								<p>As a physicist, I've been intrigued by how the properties of materials like airplane propeller blades, reinforced concrete in bridges, and magnesium in competition bike frames are influenced by the microscopic movement of atoms within alloys. These movements can introduce defects that weaken the materials, as seen in the premature deterioration of bridges due to rusting steel cables. However, metallurgists have harnessed these atomic movements for millennia to manipulate material properties like hardness and flexibility, even without fully understanding the underlying atomic dynamics.</p>
 								<p>The scientific exploration of these phenomena dates back to the 19th century with Svante Arrhenius, who linked reaction speeds to temperature. More recently, a study I was involved in, <a href="https://doi.org/10.1038/s41467-020-17812-2" target="_blank">published in Nature Communications</a>, utilized advanced simulation algorithms and massive data processing to uncover that the so-called compensation law, a mysterious behavior observed in material defects, is a statistical phenomenon related to the weakening of chemical bonds at high energy barriers.</p>
 								<p>This breakthrough, achieved by analyzing millions of atomic movements, not only clarifies a century-old mystery but also paves the way for developing more sustainable and less costly alloys, enhancing our ability to control material properties and reduce environmental impact.</p>
