--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">About Me</a></li>
-								<li><a href="#work">Research</a></li>
+								<li><a href="#research">Research</a></li>
 								<!--<li><a href="#about">Talks</a></li>-->
-								<li><a href="https://champagnealexandre.github.io/cv.pdf" target="_blank">CV</a></li>
+								<li><a href="https://alexandrechampagne.io/cv.pdf" target="_blank">CV</a></li>
 								<!--<li><a href="#contact">Contact</a></li>-->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -66,7 +66,7 @@
 							</article>
 
 						<!-- Work -->
-							<article id="work">
+							<article id="research">
 								<h2 class="major">Research</h2>
 								<h4>A few projects I have participated in.</h4>
 								<p style="margin-bottom: 3rem;"></p>
