--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 								<p>As a physicist, I've been intrigued by how the properties of materials like airplane propeller blades, reinforced concrete in bridges, and magnesium in competition bike frames are influenced by the microscopic movement of atoms within alloys. These movements can introduce defects that weaken the materials, as seen in the premature deterioration of bridges due to rusting steel cables. However, metallurgists have harnessed these atomic movements for millennia to manipulate material properties like hardness and flexibility, even without fully understanding the underlying atomic dynamics.</p>
 								<p>The scientific exploration of these phenomena dates back to the 19th century with Svante Arrhenius, who linked reaction speeds to temperature. More recently, a study I was involved in, <a href="https://doi.org/10.1038/s41467-020-17812-2" target="_blank">published in Nature Communications</a>, utilized advanced simulation algorithms and massive data processing to uncover that the so-called compensation law, a mysterious behavior observed in material defects, is a statistical phenomenon related to the weakening of chemical bonds at high energy barriers.</p>
 								<p>This breakthrough, achieved by analyzing millions of atomic movements, not only clarifies a century-old mystery but also paves the way for developing more sustainable and less costly alloys, enhancing our ability to control material properties and reduce environmental impact.</p>
-								<figure class="fig" style="margin-bottom: 5rem;">
+								<figure class="fig">
 								  <span class="image main">
 								    <img src="images/materials.jpg" alt="" />
 								  </span>
