--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								<p>What emerged is that space and flow matter a lot. Certain layouts and moderate mixing can nudge chemistry toward more intricate products, even without biology. In contrast, highly disordered connections, or mixing that’s too fast, tend to erase or dilute complexity before it can accumulate or be detected. The takeaway is practical: measuring “complexity alone” can mislead if we ignore how the environment moves and organizes matter. Accounting for transport and topology helps us design better life-detection strategies and laboratory setups, both to avoid false positives and to deliberately cultivate conditions where complexity can arise from scratch.</p>
 								<figure class="fig" style="margin-bottom: 5rem;">
 								  <span class="image main">
-								    <img src="images/artificial-chemistry.jpg" alt="" />
+								    <img src="images/artificial-chemistry.jpg" alt="" style="background:#fff; padding:8px; display:block;"/>
 								  </span>
 								  <figcaption class="figcap">(Champagne-Ruel et al., 2025)</figcaption>
 								</figure>							
@@ -102,7 +102,7 @@
 								<p>This discovery contributes to shedding new light not only on the emergence of life but also on a whole host of complex phenomena that undergo the effects of diffusion and depend on a form of cooperation in the unfolding of their dynamics. Our research thus helps to deepen our understanding of phenomena as varied as the behavior of bacterial colonies, bird flocking, or even traffic congestion.</p>
 								<figure class="fig" style="margin-bottom: 5rem;">
 								  <span class="image main">
-								    <img src="images/diffusion.jpg" alt="" />
+								    <img src="images/diffusion.jpg" alt="" style="background:#fff; padding:15px; display:block;"/>
 								  </span>
 								  <figcaption class="figcap">(Champagne-Ruel et al., 2024)</figcaption>
 								</figure>	
@@ -124,7 +124,7 @@
 								<p>This research is particularly exciting for astrobiologists, especially given the new observational powers provided by the James Webb Space Telescope. It indicates that life might not only be possible in the mild conditions of Earth-like planets but could also arise in more extreme environments. The message from our work is clear: in the quest for extraterrestrial life, leave no stone unturned, as natural cooperation — and thus life — could emerge from anywhere, even the most unwelcoming environments.</p>
 								<figure class="fig" style="margin-bottom: 5rem;">
 								  <span class="image main">
-								    <img src="images/cooperation.jpg" alt="" />
+								    <img src="images/cooperation.jpg" alt="" style="background:#fff; padding:8px; display:block;"/>
 								  </span>
 								  <figcaption class="figcap">(Champagne-Ruel et al., 2022)</figcaption>
 								</figure>	
@@ -135,7 +135,7 @@
 								<p>This breakthrough, achieved by analyzing millions of atomic movements, not only clarifies a century-old mystery but also paves the way for developing more sustainable and less costly alloys, enhancing our ability to control material properties and reduce environmental impact.</p>
 								<figure class="fig">
 								  <span class="image main">
-								    <img src="images/materials.jpg" alt="" />
+								    <img src="images/materials.jpg" alt="" style="background:#fff; padding:15px; display:block;"/>
 								  </span>
 								  <figcaption class="figcap">(Gelin et al., 2020)</figcaption>
 								</figure>	
