--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<!-- Work -->
 							<article id="research">
 								<h2 class="major">Research</h2>
-								<h4>A few projects I have participated in.</h4>
+								<h4>A few projects I have worked on.</h4>
 								<p style="margin-bottom: 3rem;"></p>
 
 								<h2>Artificial Chemistry</h2>
