remove design attribution

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">Image Credit: ESA / Hubble & NASA, G. Duchêne — Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright" style="color: #BBB;">Image Credit: ESA / Hubble & NASA, G. Duchêne</p>
 					</footer>
 
 			</div>
