add list of publications

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			#publications li {
+				margin-bottom: 2em;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -35,6 +40,7 @@
 							<ul>
 								<li><a href="#intro">About Me</a></li>
 								<li><a href="#research">Research</a></li>
+								<li><a href="#publications">Publications</a></li>
 								<!--<li><a href="#about">Talks</a></li>-->
 								<li><a href="https://alexandrechampagne.io/cv.pdf" target="_blank">CV</a></li>
 								<!--<li><a href="#contact">Contact</a></li>-->
@@ -58,9 +64,8 @@
 								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/me.jpg" alt="" /></span>
 								<p style="font-size: 24pt;">Hi!</p>
-								<p>I’m a physicist with dual training in philosophy, working at the intersection of complex systems, major evolutionary transitions, and the origins and detection of life, with a particular emphasis on agnostic approaches to life detection.</p>
+								<p>I’m a NASA Postdoctoral Fellow and Physicist in the <a href="https://mathis-group.github.io" target="_blank">Mathis Group</a> at Arizona State University’s Biodesign Institute, investigating the physical principles underlying the origin of life. My research integrates statistical mechanics, information theory, and evolutionary dynamics to understand how spatial environments drive the emergence of complexity.</p>
 								<p>I completed my PhD at the Université de Montréal in 2025. My thesis, <a href="https://hdl.handle.net/1866/42175" target="_blank">La spatialité dans l’évolution prébiotique : vers une physique de l’émergence de la complexité</a> (<i>Spatiality in prebiotic evolution: toward a physics of the emergence of complexity</i>), explored how spatial structure can shape the emergence of molecular and evolutionary complexity.</p>
-								<p>I’m currently a NASA Postdoctoral Program Fellow in the <a href="https://mathis-group.github.io" target="_blank">Mathis Group</a> at Arizona State University’s Biodesign Institute. My work focuses on developing agnostic approaches to identifying life through measurable signatures of molecular complexity.</p>
 								<p>I also maintain the <a href="https://buttondown.com/ooldigest/" target="_blank">Origin of Life Digest</a>, and I’m a member of the <a href="https://www.oolen.org" target="_blank">Origin of Life Early Career Network</a> (OoLEN), serving on its Executive Board since 2022.</p>
 
 							</article>
@@ -140,6 +145,96 @@
 								  <figcaption class="figcap">(Gelin et al., 2020)</figcaption>
 								</figure>	
 								</article>
+
+						<!-- Publications -->
+							<article id="publications">
+								<h2 class="major">Publications</h2>
+								
+								<h3>Published Articles</h3>
+								<ul>
+									<li>
+										<b>Champagne-Ruel, A.</b>, Zakaib-Bernier, S., & Charbonneau, P. (2024). <br>
+										Diffusion and Pattern Formation in Spatial Games. <br>
+										<i>Physical Review E</i>, 110(1), 014301. <br>
+										<a href="https://doi.org/10.1103/PhysRevE.110.014301" target="_blank">DOI: 10.1103/PhysRevE.110.014301</a>
+									</li>
+									<li>
+										<b>Champagne-Ruel, A.</b>, & Charbonneau, P. (2022). <br>
+										A Mutation Threshold for Cooperative Takeover. <br>
+										<i>Life</i>, 12(2), 254. <br>
+										<a href="https://doi.org/10.3390/life12020254" target="_blank">DOI: 10.3390/life12020254</a>
+									</li>
+									<li>
+										Gelin, S., <b>Champagne-Ruel, A.</b>, & Mousseau, N. (2020). <br>
+										Enthalpy-Entropy Compensation of Atomic Diffusion Originates from Softening of Low Frequency Phonons. <br>
+										<i>Nature Communications</i>, 11(1), 3977. <br>
+										<a href="https://doi.org/10.1038/s41467-020-17812-2" target="_blank">DOI: 10.1038/s41467-020-17812-2</a>
+									</li>
+								</ul>
+
+								<h3>Invited Talks</h3>
+								<ul>
+									<li>
+										<b>Champagne-Ruel, A.</b> (2025). <br>
+										Physics of Complexity And Agnostic Life Detection. <br>
+										<i>Trottier Institute for Research on Exoplanets (Canada)</i>.
+									</li>
+									<li>
+										<b>Champagne-Ruel, A.</b> (2025). <br>
+										Spatial Patterning and Selection: How the Environment Shapes Molecular Complexity. <br>
+										<i>Max Planck Institute for Terrestrial Microbiology (Germany)</i>.
+									</li>
+									<li>
+										<b>Champagne-Ruel, A.</b> (2024). <br>
+										From Emergent Complexity to Reliable Life Detection. <br>
+										<i>Arizona State University</i>.
+									</li>
+									<li>
+										<b>Champagne-Ruel, A.</b> (2022). <br>
+										Coopération, émergence et transitions : comment la physique statistique peut nous éclairer sur la question des origines. <br>
+										<i>Qu’est-ce qu’expliquer une origine en science ? (CIRST, UQAM)</i>.
+									</li>
+								</ul>
+
+								<h3>Oral Presentations</h3>
+								<ul>
+									<li>
+										<b>Champagne-Ruel, A.</b>, & Mathis, C. (2025). <br>
+										From Emergent Complexity to Reliable Life Detection. <br>
+										<i>BEACON (Iceland)</i>.
+									</li>
+									<li>
+										<b>Champagne-Ruel, A.</b> (2024). <br>
+										Diffusion: An Overlooked Driver of Prebiotic Complexity. <br>
+										<i>AbSciCon (Providence)</i>.
+									</li>
+									<li>
+										<b>Champagne-Ruel, A.</b> (2023). <br>
+										Théorie de l’information et origine de la vie. <br>
+										<i>90e Congrès de l’ACFAS</i>.
+									</li>
+									<li>
+										<b>Champagne-Ruel, A.</b> (2022). <br>
+										Cooperation: An Emergent Universal Feature at the Dawn of Life. <br>
+										<i>Interdisciplinary Origin of Life Meeting for Early Career Researchers (Montréal)</i>.
+									</li>
+									<li>
+										<b>Champagne-Ruel, A.</b> (2022). <br>
+										A Mutation Threshold for Cooperative Takeover. <br>
+										<i>AbSciCon (Atlanta)</i>.
+									</li>
+									<li>
+										<b>Champagne-Ruel, A.</b> (2021). <br>
+										Mutation Favors the Emergence of Cooperation. <br>
+										<i>Life and Space Poland</i>.
+									</li>
+									<li>
+										<b>Champagne-Ruel, A.</b> (2019). <br>
+										La criticalité dans un système évolutif artificiel. <br>
+										<i>Centre de recherche en astrophysique du Québec (CRAQ) - Rencontre annuelle</i>.
+									</li>
+								</ul>
+							</article>
 
 						<!-- About -->
 							<article id="about">
