--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 									</li>
 								</ul>
 
-								<h3>Oral Presentations</h3>
+								<h3>Contributed Talks</h3>
 								<ul>
 									<li>
 										<b>Champagne-Ruel, A.</b>, & Mathis, C. (2025). <br>
