--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								<li><a href="#research">Research</a></li>
 								<li><a href="#publications">Publications</a></li>
 								<!--<li><a href="#about">Talks</a></li>-->
-								<li><a href="https://alexandrechampagne.io/cv.pdf" target="_blank">CV</a></li>
+								<li><a href="https://alexandrechampagne.io/cv/cv.pdf" target="_blank">CV</a></li>
 								<!--<li><a href="#contact">Contact</a></li>-->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
